# cli-logging-moxad

./: .gitignore  Makefile  README.md  README.txt  RELEASE-NOTES  pyproject.toml
cli_logging/: __init__.py  logging_utils.py
cli_logging_moxad/: __init__.py  logging_utils.py
testing/: test.py
